--- a/backend/package.json
+++ b/backend/package.json
@@ -3,14 +3,20 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "type": "module",
-  "scripts": {
-    "dev": "node src/server.js"
-  },
+"scripts": {
+  "dev": "node src/server.js", 
+  "start": "node src/server.js"
+},
   "dependencies": {
+    "@prisma/client": "^6.15.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.15.0"
   }
 }
